--- a/package.json
+++ b/package.json
@@ -21,20 +21,31 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@stripe/stripe-js": "^3.0.6",
     "@t3-oss/env-nextjs": "^0.9.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
+    "jotai": "^2.7.0",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "react-resizable-panels": "^2.0.12",
     "resend": "^3.2.0",
     "sonner": "^1.4.3",
     "stripe": "^14.19.0",
