--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.8",
     "jotai": "^2.7.0",
     "lucide-react": "^0.344.0",
     "next": "14.1.0",
@@ -44,6 +45,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-headroom": "^3.2.1",
     "react-hook-form": "^7.50.1",
     "react-resizable-panels": "^2.0.12",
     "resend": "^3.2.0",
@@ -58,6 +60,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-headroom": "^3.2.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
